--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ dirs = "5.0.1"
 toml = "0.8.19"
 once_cell = "1.19.0"
 arboard = "3.4.0"
+image = "0.25.2"
 
 [dependencies.uuid]
 version = "1.10.0"
