--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,10 +40,11 @@ toml = "0.8.19"
 once_cell = "1.19.0"
 arboard = "3.4.0"
 image = "0.25.2"
-winapi = { version = "0.3.9", features = ["winuser", "basetsd", "minwindef", "winbase"] }
+openssl-sys = { version = "0.9", features = ["vendored"] }
 
 [target.'cfg(windows)'.dependencies]
 clipboard-win = { version = "5.4.0" }
+winapi = { version = "0.3.9", features = ["winuser", "basetsd", "minwindef", "winbase"] }
 
 [dependencies.uuid]
 version = "1.10.0"
