--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 [profile.release]
 lto = true
 
+[features]
+clipboard_tests = []
+
 [dependencies]
 # 网络通信
 tokio = { version = "1", features = ["full"] }
@@ -63,3 +66,4 @@ lazy_static = "1.4.0"
 dotenv = "0.15.0"
 mockall = "0.11"
 tokio = { version = "1", features = ["full"] }
+serial_test = "3.1.1"
