refactor: feature 新增一个 testing，用于标记仅在测试或开发时使用的代码

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ clipboard_tests = []
 network_tests = []
 vendored_openssl = ["openssl-sys/vendored"]
 hardware_tests = []
+testing = []
 
 [dependencies]
 # 网络通信
