--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ arboard = "3.4.0"
 image = "0.25.2"
 openssl-sys = "0.9"
 device_query = "2.1.0"
+keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
 
 [target.'cfg(windows)'.dependencies]
 clipboard-win = { version = "5.4.0" }
