--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ testing = []
 
 [dependencies]
 # 网络通信
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1.28", features = ["full"] }
 tokio-util = { version = "0.7", features = ["codec"] }
 
 # 序列化
@@ -52,6 +52,10 @@ device_query = "2.1.0"
 
 # 加密
 aes-gcm = "0.10.3"
+tokio-tungstenite = "0.19"
+futures-util = "0.3"
+async-trait = "0.1.82"
+futures = "0.3.30"
 
 [target.'cfg(windows)'.dependencies]
 clipboard-win = { version = "5.4.0" }
