--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ futures-util = "0.3"
 async-trait = "0.1.82"
 futures = "0.3.30"
 clipboard-rs = "0.2.1"
+console = "0.15.8"
 
 [target.'cfg(windows)'.dependencies]
 clipboard-win = { version = "5.4.0" }
