--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,7 @@ async-trait = "0.1.82"
 futures = "0.3.30"
 clipboard-rs = "0.2.1"
 console = "0.15.8"
+twox-hash = "1.6.3"
 
 [target.'cfg(windows)'.dependencies]
 clipboard-win = { version = "5.4.0" }
