--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,11 @@ version = "0.1.1"
 edition = "2021"
 
 [profile.release]
-panic = "abort"   # Strip expensive panic clean-up logic
+panic = "abort" # Strip expensive panic clean-up logic
 codegen-units = 1 # Compile crates one after another so the compiler can optimize better
-lto = true        # Enables link to optimizations
-opt-level = "z"   # Optimize for binary size
-strip = true      # Remove debug symbols
+lto = true # Enables link to optimizations
+opt-level = "z" # Optimize for binary size
+strip = true # Remove debug symbols
 
 [features]
 clipboard_tests = []
@@ -31,7 +31,7 @@ anyhow = "1.0.89"
 
 # 日志
 log = "0.4"
-env_logger = { version = "0.10", features = ["color"] }
+env_logger = "0.11.5"
 
 # 命令行参数解析
 clap = { version = "4.3", features = ["derive"] }
@@ -65,12 +65,7 @@ twox-hash = "1.6.3"
 
 [target.'cfg(windows)'.dependencies]
 clipboard-win = { version = "5.4.0" }
-winapi = { version = "0.3.9", features = [
-    "winuser",
-    "basetsd",
-    "minwindef",
-    "winbase",
-] }
+winapi = { version = "0.3.9", features = ["winuser", "basetsd", "minwindef", "winbase"] }
 
 [dependencies.uuid]
 version = "1.10.0"
