--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,8 @@ futures = "0.3.30"
 clipboard-rs = "0.2.1"
 console = "0.15.8"
 twox-hash = "1.6.3"
+rayon = "1.10.0"
+png = "0.17.14"
 
 [target.'cfg(windows)'.dependencies]
 clipboard-win = { version = "5.4.0" }
