--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,10 +2,9 @@ name: Release
 
 on:
   push:
-    # branches: ["**"]
-    tags: ["*"]
-  pull_request:
-    branches: ["master", "dev"]
+    tags: 
+      - "v*"           # 匹配所有以 v 开头的标签
+      - "beta-v*"      # 匹配所有以 beta-v 开头的标签
 
 env:
   # Define the rust version to use
@@ -99,7 +98,7 @@ jobs:
     name: Release
     needs: [build]
     # We run the release job only if a tag starts with 'v' letter
-    if: startsWith( github.ref, 'refs/tags/v' )
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout Git repo
@@ -122,3 +121,10 @@ jobs:
           args: release --clean --skip=validate
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN_RUST_CROSS }}
+
+      # 为测试版本添加特殊标记
+      - name: Mark as pre-release
+        if: startsWith(github.ref, 'refs/tags/beta-')
+        run: |
+          echo "This is a pre-release version" >> $GITHUB_STEP_SUMMARY
+          # 这里可以添加更多的操作，比如修改 release notes 等
