test: 尝试修复在代码覆盖率 Job 中测试用例运行失败的问题

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,7 +45,8 @@ jobs:
     - name: Install tarpaulin
       run: cargo install cargo-tarpaulin
     - name: Generate coverage report
-      run: cargo tarpaulin --out Xml
+      run: |
+        RUST_BACKTRACE=1 cargo tarpaulin --out Xml --verbose -- --test-threads=1
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
