ci: 配置 codecov，用于在 PR 中直接显示测试覆盖率

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -13,3 +13,6 @@ comment:
   layout: "reach, diff, flags, files"
   behavior: default
   require_changes: true  # 如果覆盖率没有变化，也发表评论
+
+github_checks:
+  annotations: true
