--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,7 +55,11 @@ jobs:
         fail_ci_if_error: true
     - name: Check coverage
       run: |
-        COVERAGE=$(grep -oP 'line-rate="\K[^"]+' cobertura.xml)
+        if [ ! -f cobertura.xml ]; then
+          echo "Coverage file not found"
+          exit 1
+        fi
+        COVERAGE=$(grep -oP 'line-rate="\K[^"]+' cobertura.xml || echo "0")
         COVERAGE_PERCENTAGE=$(echo "$COVERAGE * 100" | bc)
         if (( $(echo "$COVERAGE_PERCENTAGE < 80" | bc -l) )); then
           echo "代码覆盖率 ($COVERAGE_PERCENTAGE%) 低于目标 (80%)"
@@ -68,20 +72,3 @@ jobs:
       with:
         name: code-coverage-report
         path: cobertura.xml
-    - name: Comment PR
-      uses: actions/github-script@v6
-      if: github.event_name == 'pull_request'
-      with:
-        github-token: ${{secrets.GITHUB_TOKEN}}
-        script: |
-          const fs = require('fs')
-          const coverageReport = fs.readFileSync('cobertura.xml', 'utf8')
-          const coveragePercentage = coverageReport.match(/<coverage line-rate="(.*)">/)[1]
-          const coverage = (parseFloat(coveragePercentage) * 100).toFixed(2)
-          const targetMet = coverage >= 80 ? '✅' : '❌'
-          github.rest.issues.createComment({
-            issue_number: context.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: `代码覆盖率: ${coverage}% ${targetMet}\n目标: 80%`
-          })
