refactor: 使用 integration_tests 作为集成测试的 feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,9 @@ opt-level = "z"   # Optimize for binary size
 strip = true      # Remove debug symbols
 
 [features]
-clipboard_tests = []
-network_tests = []
 vendored_openssl = ["openssl-sys/vendored"]
+integration_tests = []
+network_tests = []
 hardware_tests = []
 testing = []
 
