--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,8 +29,8 @@ jobs:
     - name: Run tests
       run: make ci
 
-  coverage:
-    runs-on: ubuntu-latest
+  integration_tests:
+    runs-on: [self-hosted, linux, x64]
     steps:
     - uses: actions/checkout@v4
     - name: Install Rust
@@ -44,9 +44,8 @@ jobs:
         sudo apt-get install -y pkg-config libssl-dev libxdo-dev
     - name: Install tarpaulin
       run: cargo install cargo-tarpaulin
-    - name: Generate coverage report
-      run: |
-        RUST_BACKTRACE=1 cargo tarpaulin --out Xml --verbose -- --test-threads=1
+    - name: Run integration tests and generate coverage report
+      run: cargo tarpaulin --features integration_tests --out Xml --verbose -- --test-threads=1
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4.2.0
       with:
