--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,9 +2,23 @@ name: Release
 
 on:
   push:
-    tags: 
-      - "v*"           # 匹配所有以 v 开头的标签
-      - "beta-v*"      # 匹配所有以 beta-v 开头的标签
+    tags:
+      - "v*" # 匹配所有以 v 开头的标签
+      - "beta-v*" # 匹配所有以 beta-v 开头的标签
+  workflow_dispatch:
+    inputs:
+      draft:
+        type: boolean
+        default: true
+        description: "创建草稿发布"
+      version:
+        type: string
+        description: "发布版本 (例如: v1.0.0)"
+        required: true
+      release:
+        description: "执行发布任务"
+        type: boolean
+        default: true
 
 env:
   # Define the rust version to use
@@ -21,7 +35,7 @@ jobs:
   build:
     name: Build - ${{ matrix.platform.name }}
     # By default, runs on Ubuntu, otherwise, override with the desired os
-    runs-on: ${{ matrix.platform.os || 'ubuntu-22.04' }}
+    runs-on: ${{ matrix.platform.os || 'ubuntu-20.04' }}
     strategy:
       matrix:
         # Set platforms you want to build your binaries on
@@ -87,7 +101,7 @@ jobs:
           sh -c "CC=o64-clang CXX=o64-clang++ cargo build $BUILD_ARGS --target ${{ matrix.platform.target }}"
 
       - name: Store artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           # Finally, we store the binary as GitHub artifact for later usage
           name: ${{ matrix.platform.target }}-${{ env.BIN_NAME }}
@@ -97,34 +111,63 @@ jobs:
   release:
     name: Release
     needs: [build]
-    # We run the release job only if a tag starts with 'v' letter
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'workflow_dispatch' && github.event.inputs.release == 'true')
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout Git repo
         uses: actions/checkout@v3
 
+      - name: Install nfpm
+        run: |
+          echo 'deb [trusted=yes] https://repo.goreleaser.com/apt/ /' | sudo tee /etc/apt/sources.list.d/goreleaser.list
+          sudo apt update
+          sudo apt install nfpm
+
       # Download all artifacts
-      - uses: actions/download-artifact@v3
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
         with:
           path: artifacts
 
       # Goreleaser
       - name: Set up Go
         uses: actions/setup-go@v4
+
+      - name: Set release version
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "RELEASE_VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
+          else
+            echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+          fi
+
+      - name: Create temporary tag
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git tag -a ${{ github.event.inputs.version }} -m "Release ${{ github.event.inputs.version }}"
+
+      - name: Display workspace status
+        run: |
+          git status
+          echo "Contents of the current directory:"
+          ls -R
+          echo "Contents of the artifacts directory:"
+          ls -R artifacts/
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
           distribution: goreleaser
           version: latest
-          # Run goreleaser and ignore non-committed files (downloaded artifacts)
-          args: release --clean --skip=validate
+          args: release --skip=validate --debug
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN_RUST_CROSS }}
 
-      # 为测试版本添加特殊标记
-      - name: Mark as pre-release
-        if: startsWith(github.ref, 'refs/tags/beta-')
+      - name: Debug Artifacts and Dist (After)
         run: |
-          echo "This is a pre-release version" >> $GITHUB_STEP_SUMMARY
-          # 这里可以添加更多的操作，比如修改 release notes 等
+          echo "Contents of artifacts directory:"
+          ls -R artifacts/
+          echo "Contents of dist directory:"
+          ls -R dist/
