--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,6 +19,14 @@ on:
         description: "执行发布任务"
         type: boolean
         default: true
+      prerelease:
+        description: "是否为预发布版本"
+        type: boolean
+        default: false
+      test-workflow:
+        description: "是否为测试工作流程"
+        type: boolean
+        default: false
 
 env:
   # Define the rust version to use
@@ -63,6 +71,55 @@ jobs:
     steps:
       - name: Checkout Git repo
         uses: actions/checkout@v4
+
+      - name: Install GitHub CLI
+        run: |
+          type -p curl >/dev/null || (sudo apt update && sudo apt install curl -y)
+          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \
+          && sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
+          && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
+          && sudo apt update \
+          && sudo apt install gh -y
+
+        # 设置发布版本, 如果手动触发工作流程, 则根据输入的版本和预发布标记生成最终的版本号
+      - name: Set release version
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            # 手动触发工作流程
+            INPUT_VERSION="${{ github.event.inputs.version }}"
+            if [ "${{ github.event.inputs.prerelease }}" = "true" ]; then
+              # 预发布版本
+              BETA_VERSION=$(gh release list --limit 1000 | grep "${INPUT_VERSION}-beta" | sort -V | tail -n 1 | sed -E 's/.*beta\.([0-9]+).*/\1/')
+              if [ -z "$BETA_VERSION" ]; then
+                BETA_VERSION=0
+              fi
+              NEXT_BETA=$((BETA_VERSION + 1))
+              echo "RELEASE_VERSION=${INPUT_VERSION}-beta.${NEXT_BETA}" >> $GITHUB_ENV
+            else
+              # 正式版本
+              echo "RELEASE_VERSION=${INPUT_VERSION}" >> $GITHUB_ENV
+            fi
+          else
+            # 通过推送标签触发
+            echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+          fi
+          # 将版本号写入到文件
+          echo "${RELEASE_VERSION}" >> version.txt
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # 自动更新 Cargo.toml 中的版本号
+      - name: Update Cargo.toml version(if test-workflow is false)
+        run: |
+          sed -i 's/^version = ".*"/version = "${{ env.RELEASE_VERSION }}"/' Cargo.toml
+          # 如果不是测试流程，则提交更改
+          if [ "${{ github.event.inputs.test-workflow }}" = "false" ]; then
+            git config user.name github-actions
+            git config user.email github-actions@github.com
+            git add Cargo.toml
+            git commit -m "Bump version to ${{ env.RELEASE_VERSION }}"
+            git push
+          fi
 
       # Linux & Windows
       - name: Install rust toolchain
@@ -137,6 +194,13 @@ jobs:
           path: target/${{ matrix.platform.target }}/release/${{ env.BIN_NAME }}${{ contains(matrix.platform.target, 'windows') && '.exe' || '' }}
           retention-days: 1
 
+      - name: Set version file
+        uses: actions/upload-artifact@v4
+        with:
+          name: version
+          path: version.txt
+          retention-days: 1
+
   release:
     name: Release
     needs: [build]
@@ -158,24 +222,22 @@ jobs:
         with:
           path: artifacts
 
+      # Set version
+      - name: Set release version
+        run: |
+          cat artifacts/version.txt
+          echo "RELEASE_VERSION=$(cat artifacts/version.txt)" >> $GITHUB_ENV
+
       # Goreleaser
       - name: Set up Go
         uses: actions/setup-go@v4
 
-      - name: Set release version
-        run: |
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            echo "RELEASE_VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
-          else
-            echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
-          fi
-
-      - name: Create temporary tag
+      - name: Create temporary tag (if workflow_dispatch)
         if: github.event_name == 'workflow_dispatch'
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git tag -a ${{ github.event.inputs.version }} -m "Release ${{ github.event.inputs.version }}"
+          git tag -a ${{ env.RELEASE_VERSION }} -m "Release ${{ env.RELEASE_VERSION }}"
 
       - name: Display workspace status
         run: |
@@ -193,6 +255,7 @@ jobs:
           args: release --skip=validate --debug --config .goreleaser.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN_RUST_CROSS }}
+          PRE_RELEASE: ${{ github.event.inputs.prerelease }}
 
       - name: Debug Artifacts and Dist (After)
         run: |
@@ -227,11 +290,9 @@ jobs:
 
       - name: Set release version
         run: |
-          if ("${{ github.event_name }}" -eq "workflow_dispatch") {
-            echo "RELEASE_VERSION=${{ github.event.inputs.version }}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          } else {
-            echo "RELEASE_VERSION=$($env:GITHUB_REF -replace 'refs/tags/','')" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          }
+          Get-Content -Path artifacts/version.txt
+          $version = Get-Content -Path artifacts/version.txt
+          echo "RELEASE_VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
         shell: powershell
 
       - name: Create temporary tag
@@ -239,7 +300,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git tag -a ${{ github.event.inputs.version }} -m "Release ${{ github.event.inputs.version }}"
+          git tag -a ${{ env.RELEASE_VERSION }} -m "Release ${{ env.RELEASE_VERSION }}"
         shell: powershell
 
       - name: Display replace-bin.ps1 content
