ci: 手动发布，默认是预发布且是测试工作流程
避免自动更新 Cargo.toml 中的版本号

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,11 +22,11 @@ on:
       prerelease:
         description: "是否为预发布版本"
         type: boolean
-        default: false
+        default: true
       test-workflow:
         description: "是否为测试工作流程"
         type: boolean
-        default: false
+        default: true
 
 env:
   # Define the rust version to use
