--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,10 +11,6 @@ on:
         type: boolean
         default: true
         description: "创建草稿发布"
-      version:
-        type: string
-        description: "发布版本 (例如: v1.0.0)"
-        required: true
       release:
         description: "执行发布任务"
         type: boolean
@@ -27,6 +23,10 @@ on:
         description: "是否为测试工作流程"
         type: boolean
         default: true
+      version:
+        type: string
+        description: "发布版本 (例如: v1.0.0)"
+        required: true
 
 env:
   # Define the rust version to use
@@ -40,8 +40,79 @@ env:
   DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
 
 jobs:
+  prepare:
+    name: Prepare
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout Git repo
+        uses: actions/checkout@v4
+
+      - name: Install GitHub CLI
+        run: |
+          type -p curl >/dev/null || (sudo apt update && sudo apt install curl -y)
+          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \
+          && sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
+          && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
+          && sudo apt update \
+          && sudo apt install gh -y
+
+        # 设置发布版本, 如果手动触发工作流程, 则根据输入的版本和预发布标记生成最终的版本号
+      - name: Generate release version
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "Debug: Workflow dispatch triggered"
+            # 手动触发工作流程
+            INPUT_VERSION="${{ github.event.inputs.version }}"
+            if [ "${{ github.event.inputs.prerelease }}" = "true" ]; then
+              # 预发布版本
+              BETA_VERSION=$(gh release list --limit 1000 | grep "${INPUT_VERSION}-beta" | sort -V | tail -n 1 | sed -E 's/.*beta\.([0-9]+).*/\1/')
+              if [ -z "$BETA_VERSION" ]; then
+                BETA_VERSION=0
+              fi
+              NEXT_BETA=$((BETA_VERSION + 1))
+              echo "RELEASE_VERSION=${INPUT_VERSION}-beta.${NEXT_BETA}" >> $GITHUB_ENV
+            else
+              # 正式版本
+              echo "RELEASE_VERSION=${INPUT_VERSION}" >> $GITHUB_ENV
+            fi
+          else
+            echo "Debug: Tag push triggered"
+            # 通过推送标签触发
+            echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Write version to file
+        run: |
+          echo "Debug: RELEASE_VERSION=${{ env.RELEASE_VERSION }}"
+          echo "${{ env.RELEASE_VERSION }}" > version.txt
+          echo "Debug: Content of version.txt:"
+          cat version.txt
+
+      # 自动更新 Cargo.toml 中的版本号
+      - name: Update Cargo.toml version(if test-workflow is false)
+        run: |
+          sed -i 's/^version = ".*"/version = "${{ env.RELEASE_VERSION }}"/' Cargo.toml
+          # 如果不是测试流程，则提交更改
+          if [ "${{ github.event.inputs.test-workflow }}" = "false" ]; then
+            git config user.name github-actions
+            git config user.email github-actions@github.com
+            git add Cargo.toml
+            git commit -m "Bump version to ${{ env.RELEASE_VERSION }}"
+            git push
+          fi
+
+      - name: Restore version file
+        uses: actions/upload-artifact@v4
+        with:
+          name: version
+          path: version.txt
+          retention-days: 1
+
   build:
     name: Build - ${{ matrix.platform.name }}
+    needs: [prepare]
     # By default, runs on Ubuntu, otherwise, override with the desired os
     runs-on: ${{ matrix.platform.os || 'ubuntu-20.04' }}
     strategy:
@@ -72,54 +143,17 @@ jobs:
       - name: Checkout Git repo
         uses: actions/checkout@v4
 
-      - name: Install GitHub CLI
-        run: |
-          type -p curl >/dev/null || (sudo apt update && sudo apt install curl -y)
-          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \
-          && sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
-          && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
-          && sudo apt update \
-          && sudo apt install gh -y
+      # Download all artifacts
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
 
-        # 设置发布版本, 如果手动触发工作流程, 则根据输入的版本和预发布标记生成最终的版本号
+      # Set version
       - name: Set release version
         run: |
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            # 手动触发工作流程
-            INPUT_VERSION="${{ github.event.inputs.version }}"
-            if [ "${{ github.event.inputs.prerelease }}" = "true" ]; then
-              # 预发布版本
-              BETA_VERSION=$(gh release list --limit 1000 | grep "${INPUT_VERSION}-beta" | sort -V | tail -n 1 | sed -E 's/.*beta\.([0-9]+).*/\1/')
-              if [ -z "$BETA_VERSION" ]; then
-                BETA_VERSION=0
-              fi
-              NEXT_BETA=$((BETA_VERSION + 1))
-              echo "RELEASE_VERSION=${INPUT_VERSION}-beta.${NEXT_BETA}" >> $GITHUB_ENV
-            else
-              # 正式版本
-              echo "RELEASE_VERSION=${INPUT_VERSION}" >> $GITHUB_ENV
-            fi
-          else
-            # 通过推送标签触发
-            echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
-          fi
-          # 将版本号写入到文件
-          echo "${RELEASE_VERSION}" >> version.txt
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # 自动更新 Cargo.toml 中的版本号
-      - name: Update Cargo.toml version(if test-workflow is false)
-        run: |
-          sed -i 's/^version = ".*"/version = "${{ env.RELEASE_VERSION }}"/' Cargo.toml
-          # 如果不是测试流程，则提交更改
-          if [ "${{ github.event.inputs.test-workflow }}" = "false" ]; then
-            git config user.name github-actions
-            git config user.email github-actions@github.com
-            git add Cargo.toml
-            git commit -m "Bump version to ${{ env.RELEASE_VERSION }}"
-            git push
-          fi
+          cat artifacts/version/version.txt
+          echo "RELEASE_VERSION=$(cat artifacts/version/version.txt)" >> $GITHUB_ENV
 
       # Linux & Windows
       - name: Install rust toolchain
@@ -194,13 +228,6 @@ jobs:
           path: target/${{ matrix.platform.target }}/release/${{ env.BIN_NAME }}${{ contains(matrix.platform.target, 'windows') && '.exe' || '' }}
           retention-days: 1
 
-      - name: Set version file
-        uses: actions/upload-artifact@v4
-        with:
-          name: version
-          path: version.txt
-          retention-days: 1
-
   release:
     name: Release
     needs: [build]
@@ -225,8 +252,8 @@ jobs:
       # Set version
       - name: Set release version
         run: |
-          cat artifacts/version.txt
-          echo "RELEASE_VERSION=$(cat artifacts/version.txt)" >> $GITHUB_ENV
+          cat artifacts/version/version.txt
+          echo "RELEASE_VERSION=$(cat artifacts/version/version.txt)" >> $GITHUB_ENV
 
       # Goreleaser
       - name: Set up Go
@@ -285,13 +312,10 @@ jobs:
         with:
           path: artifacts
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
-
       - name: Set release version
         run: |
-          Get-Content -Path artifacts/version.txt
-          $version = Get-Content -Path artifacts/version.txt
+          Get-Content -Path artifacts/version/version.txt
+          $version = Get-Content -Path artifacts/version/version.txt
           echo "RELEASE_VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
         shell: powershell
 
@@ -309,6 +333,9 @@ jobs:
           Get-Content -Path .\scripts\replace-bin.ps1
         shell: powershell
 
+      - name: Set up Go
+        uses: actions/setup-go@v4
+
       - name: Run GoReleaser for Windows
         uses: goreleaser/goreleaser-action@v5
         with:
@@ -318,6 +345,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN_RUST_CROSS }}
           CHOCOLATEY_API_KEY: ${{ secrets.CHOCOLATEY_API_KEY }}
+          ARTIFACT_NAME: uniclipboard_${{ env.RELEASE_VERSION }}_windows_amd64.exe
 
       - name: Debug Artifacts and Dist (After)
         run: |
