--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,8 @@ console = "0.15.8"
 twox-hash = "1.6.3"
 rayon = "1.10.0"
 png = "0.17.14"
+warp = "0.3.7"
+tokio-stream = "0.1.16"
 
 [target.'cfg(windows)'.dependencies]
 clipboard-win = { version = "5.4.0" }
