--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -93,7 +93,7 @@ jobs:
       # 自动更新 Cargo.toml 中的版本号
       - name: Update Cargo.toml version(if test-workflow is false)
         run: |
-          sed -i 's/^version = ".*"/version = "${{ env.RELEASE_VERSION }}"/' Cargo.toml
+          sed -i '/^\[package\]/,/^$/s/^version = ".*"/version = "${{ env.RELEASE_VERSION }}"/' Cargo.toml
           # 如果不是测试流程，则提交更改
           if [ "${{ github.event.inputs.test-workflow }}" = "false" ]; then
             git config user.name github-actions
