feat: 引入 diesel 处理数据库

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,13 @@ warp = "0.3.7"
 tokio-stream = "0.1.16"
 local-ip-address = "0.6.3"
 
+diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
+# build libsqlite3 as part of the build process
+# uncomment this line if you run into setup issues
+# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
+dotenvy = "0.15"
+diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
+
 [target.'cfg(windows)'.dependencies]
 clipboard-win = { version = "5.4.0" }
 winapi = { version = "0.3.9", features = [
@@ -97,3 +104,4 @@ tokio = { version = "1", features = ["full"] }
 serial_test = "3.1.1"
 enigo = "0.2.1"
 arboard = "3.4.1"
+ctor = "0.2.8"
