--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -94,14 +94,16 @@ jobs:
       - name: Update Cargo.toml version(if test-workflow is false)
         run: |
           sed -i '/^\[package\]/,/^$/s/^version = ".*"/version = "${{ env.RELEASE_VERSION }}"/' Cargo.toml
-          # 如果不是测试流程，则提交更改
-          if [ "${{ github.event.inputs.test-workflow }}" = "false" ]; then
-            git config user.name github-actions
-            git config user.email github-actions@github.com
-            git add Cargo.toml
-            git commit -m "Bump version to ${{ env.RELEASE_VERSION }}"
-            git push
-          fi
+
+      - name: Create Pull Request(if test-workflow is false)
+        uses: peter-evans/create-pull-request@v7
+        if: ${{ github.event.inputs.test-workflow == 'false' }}
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          title: "Bump version to ${{ env.RELEASE_VERSION }}"
+          body: "Bump version to ${{ env.RELEASE_VERSION }}"
+          branch: "bump-version-to-${{ env.RELEASE_VERSION }}"
+          commit-message: "Bump version to ${{ env.RELEASE_VERSION }}"
 
       - name: Restore version file
         uses: actions/upload-artifact@v4
