chore: 更新相关配置

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 WEBDAV_URL=https://your-webdav-server.com/remote.php/dav/files/your-username/
 WEBDAV_USERNAME=your-username
 WEBDAV_PASSWORD=your-password
+
+DATABASE_URL=uniclipboard.db
